--- a/src/app/views/dashboard.njk
+++ b/src/app/views/dashboard.njk
@@ -1,1 +1,6 @@
-<h1>Dashboard to come</h1>
+{% extends "_layouts/default.njk" %}
+
+{% block body %}
+  <h1>Olá, {{user.name}}</h1>
+  <a href="/app/logout">Sair</a>
+{% endblock %}
