--- a/src/app/views/appointments/create.njk
+++ b/src/app/views/appointments/create.njk
@@ -18,33 +18,7 @@
   </div>
 
   <script type="text/javascript">
-    flatpickr(".flatpickr", {
-      minDate: new Date(),
-      dateFormat: "d/m/Y H:m",
-      enableTime: true,
-      minTime: "08:00",
-      maxTime: "20:00",
-      time_24hr: true,
-      //onClose: displayAvailability()
-    });
-
-
-    function displayAvailability() {
-      const date = new Date()
-      console.log(date.getTime())
-      fetch(`/app/available/{{ provider.id }}?date=${date.getTime()}`)
-          .then(
-            function(response) {
-              response.text().then(
-                function (html) {
-                  document.getElementById('hours').innerHTML = html;
-                }
-              )
-            }
-          )
-      }
-
-    {# flatpickr('.flatpickr', {
+   flatpickr('.flatpickr', {
       minDate: new Date(),
       dateFormat: 'd/m/Y',
       onChange: function(date) {
@@ -59,6 +33,6 @@
             }
           )
       }
-    }) #}
+    })
   </script>
 {% endblock %}
